fixed the extra padding/margin issue in the vocab upsert page

--- a/src/styles/custom-styles.css
+++ b/src/styles/custom-styles.css
@@ -158,6 +158,11 @@ ion-button:not(.button-round) {
     font-size: 16px;
 }
 
+.vocab-upsert-item {
+    --padding-start: unset;
+    --inner-padding-end: unset;
+}
+
 .tips {
     display: flex;
     align-items: flex-start;
